# distribution-strategy

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
data/: channel-report.json  distribution-plan.json
docs/: seed-automation-contract.yaml  staging-reference.md
docs/pitch/: index.html
kerygma_strategy/: __init__.py  _ghost_jwt.py  analytics.py  calendar.py  channels.py  cli.py  config.py  data_export.py  ghost_metrics.py  mastodon_metrics.py  persistence.py  report_generator.py  scheduler.py
src/: __init__.py  analytics.py  channels.py  scheduler.py
tests/: test_analytics.py  test_analytics_persistence.py  test_calendar.py  test_channels.py  test_channels_yaml.py  test_data_export.py  test_ghost_metrics.py  test_mastodon_metrics.py  test_persistence.py  test_report_generator.py  test_scheduler.py  test_scheduler_calendar.py
tests/fixtures/: sample_calendar.yaml  sample_channels.yaml
